--- a/link.html
+++ b/link.html
@@ -7,16 +7,13 @@
     <link rel="stylesheet" href="css/style.min.css">
     <style>
         div{width:75%;height:20px;}
-        article{text-align: center;margin:auto;padding:20px;width: 75%;background: #fff;border-radius: 10px;box-shadow: 2px 2px 4px gray;}
+        article{text-align: center;margin:auto;padding:20px;width: 70%;background: #fff;border-radius: 10px;box-shadow: 2px 2px 4px gray;}
         article span{display: block;font-size:2em;font-weight: bold;padding-bottom:20px;}
         article a img{width:40%;}
-		@media screen and (min-width:721px){
-			article{text-align: center;margin:auto;padding:20px;width: 60%;background: #fff;border-radius: 10px;box-shadow: 2px 2px 4px gray;}
-		}
     </style>
 </head>
 <body>
-   	<h1>My Portfolio</h1>
+	<h1><a href="index.html" class="hp">My Portfolio</a></h1>
     <nav>
         <ul>
             <li><a href="index.html">HOME</a></li>
@@ -29,10 +26,8 @@
         <a href="#" id="trigger">▤ MENU ▤</a>
     </nav>
     <div></div>
-    <article>
-        <span>저의 홈페이지에 오신 것을 환영합니다. ^^</span>
-        <p style="text-align: center;">디자인은 인간의 일상에서 가장 중요한 부분을 차지한다. <br>그렇기 때문에 디자인은 단순해야 하며 사용하기 편해야 한다. <br>홈페이지도 마찬가지다.<br><br>홈페이지를 사용하는데 있어 네비게이션은<br> 알아 보기 쉽도록 해야 하며, 사용하기 편해야 한다. <br>사용자에게 직접적으로 전달할 수 있도록 메뉴는 간결해야 한다.<br>색은 너무 많이 쓰지 않는게 좋으며,<br> 글꼴은 컴퓨터에서 제공하는 글꼴로도 다양한 디자인이 가능하다.</p>
-    </article>
+    <p class="tp">Home > link</p>
+    <h2>link</h2>
     <footer>
         <p class="copyright">Copyright ⓒ 2005~2018, k2yong All right reserved.</p>
     </footer>
